<resources>
    <string name="app_name">GD_Android</string>
    <string name="loadingText">加载中...</string>
    <string name="loadingMore">正在加载</string>
    <string name="NullText">""</string>
    <!--search-->
    <string name="searchHint">请输入查找的内容</string>
    <string name="search">搜索</string>
    <!--spalash-->
    <string name="use_now">立即使用</string>
    <string name="skip">跳过</string>
    <!--register-->
    <string name="phone">手机</string>
    <string name="code">验证码</string>
    <string name="pwd">密码</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="register">注册</string>
    <string name="registeInfo">注册即表示同意《隐私权声明》</string>
    <string name="codeInfo">输入验证码</string>
    <string name="codeInfo2">短信已发送至+86</string>
    <string name="codeInfo3">后重新发送</string>
    <string name="codeInfo4">重新发送短信验证码</string>
    <string name="pwdLogin">密码登陆</string>
    <!-- login-->
    <string name="phone_info">请输入账号/手机号</string>
    <string name="phone_input_info">请输入手机号</string>
    <string name="pwd_info">请输入密码</string>
    <string name="fast_login">手机号快捷登录</string>
    <string name="forget_pwd">忘记密码？</string>

    <string name="phoneTitleinfo">+86</string>
    <string name="login">登录</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_success">获取验证码成功</string>
    <string name="get_code_failed">获取验证码失败</string>
    <string name="login_type_info">第三方</string>

    <string name="phone_login_badnumber">请输入正确的手机号</string>
    <string name="phone_login_badpwd">密码格式不正确</string>

    <string name="weichat">微信</string>
    <string name="qq">QQ</string>

    <!--main table bottom-->
    <string name="home">首页</string>
    <string name="buy">买</string>
    <string name="find">发现</string>
    <string name="person">个人中心</string>
    
    <!--home fragment-->
    <string name="hot">热门</string>
    <string name="praize">点赞</string>
    <string name="comment">评论</string>

    <string name="keyword">关键字</string>
    <string name="price_range">价格区间</string>
    <string name="keyword_search">关键字搜索</string>
    <string name="confirm">确定</string>
    <string name="reset">重置</string>


    <string name="roleName">角色名称:</string>
    <string name="roleGrade">角色等级:</string>
    <string name="contactPhone">联系手机:</string>
    <string name="contactQQ">联系QQ:</string>
    <!--fragment personal-->
    <string name="commodity_management">商品管理</string>
    <string name="order_management">订单管理</string>
    <string name="fetch">售得</string>
    <string name="cash_pledge">押金</string>
    <string name="review">审核中</string>
    <string name="on_offer">出售中</string>
    <string name="sold">已出售</string>
    <string name="storage">仓库</string>
    <string name="trading">交易中</string>
    <string name="complete">完成</string>
    <string name="cancle">取消</string>
    <string name="all">全部</string>
    <string name="collect">收藏</string>
    <string name="browsing_history">浏览记录</string>
    <string name="role_manager">角色管理</string>
    <string name="notescontact">联系客服</string>
    <string name="help">帮助中心</string>
    <!--   setting  -->
    <string name="setting">设置</string>
    <string name="setting_pwd">登陆密码</string>
    <string name="setting_phone">绑定手机号</string>
    <string name="setting_weixin">绑定微信号</string>
    <string name="setting_realName">实名认证</string>
    <string name="setting_question">问题反馈</string>
    <string name="setting_net">网络测试</string>
    <string name="setting_cache">清除缓存</string>
    <string name="setting_about">关于</string>

    <string name="setting_old_phone">原手机号码</string>
    <string name="next_step">下一步</string>

    <string name="about_appraise">评价</string>
    <string name="about_protocol">协议</string>

    <string name="certification_name_info">请输入姓名</string>
    <string name="certification_card_info">请输入身份证号码</string>
    <string name="certification_alipay_info">请输入支付宝账户</string>
    <string name="certification">认证</string>
    <string name="alipay">支付宝</string>


    <string-array name="goods_menu">
        <item>金币</item>
        <item>游戏区服</item>
        <item>筛选</item>
        <item>默认排序</item>
    </string-array>
    <string-array name="sort_menu">
        <item>默认排序</item>
        <item>价格排序</item>
        <item>价格排序</item>
        <item>单价排序</item>
    </string-array>
    <string-array name="sort_info">
        <item>(价格由低到高排序)</item>
        <item>(价格由高到低排序)</item>
        <item>(价格由低到高排序)</item>
        <item>(单价由高到低排序)</item>
    </string-array>

    <string-array name="data">
        <item>我是第一行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
        <item>我是第二行数据</item>
    </string-array>

</resources>
