<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<include layout="@layout/app_bar_base" />-->

    <com.guodong.widget.ClearEditText
        android:id="@+id/oldPhoneEdit"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp20"
        android:drawableRight="@drawable/set_exit"
        android:hint="@string/setting_old_phone"
        style="@style/Setting_EditText"
        android:inputType="phone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/code"
            style="@style/Setting_EditText"
            />
        <Button
            android:id="@+id/modifyPhoneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp10"
            android:padding="@dimen/dp5"
            android:text="@string/get_code"/>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginTop="@dimen/dp20"
        android:layout_marginRight="@dimen/dp10"
        android:layout_marginLeft="@dimen/dp10"
        android:background="@drawable/button"
        android:textSize="@dimen/fontSize16"
        android:textColor="@color/colorWhite"
        android:text="@string/next_step"/>

</LinearLayout>
