<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            layout="@layout/app_bar_base" />
        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp20"
            android:hint="@string/phone_info"
            style="@style/Setting_EditText"
            android:inputType="phone"/>
        <EditText
            android:id="@+id/pwdEdit"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp20"
            android:hint="@string/pwd_info"
            style="@style/Setting_EditText"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/phoneLoginView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp30"
                android:text="@string/fast_login"
                android:layout_marginLeft="@dimen/dp16"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center_vertical"
                />

            <TextView
                android:id="@+id/forgetPwdView"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp30"
                android:layout_marginRight="@dimen/dp16"
                android:layout_marginTop="@dimen/dp20"
                android:gravity="center"
                android:layout_alignParentRight="true"
                android:text="@string/forget_pwd" />
        </RelativeLayout>


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp40"
            android:layout_marginTop="@dimen/dp40"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginLeft="@dimen/dp10"
            android:background="@drawable/button_background"
            android:textSize="@dimen/fontSize16"
            android:textColor="@color/colorWhite"
            android:text="@string/login"/>


        <include
            layout="@layout/item_third_login"/>
    </LinearLayout>



</ScrollView>
